--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -13,8 +13,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "ethers": "^6.11.1",
-    "@google/genai": "latest",
-    "lucide-react": "^0.363.0"
+    "@google/genai": "latest"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
